# Polymer-Solubility-Data_Crystal16

./: README.md  polymers_smiles.csv  solvents_smiles.csv
Unprocessed_Data/: .env  README.md  add_data.py  build_database.py  pyproject.toml
Unprocessed_Data/Cellulose acetate/: Cellulose acetate-DMSO-DMF-Pyridine-Acetonitrile.csv  SC Cellulose acetate-Cyclohexanone-THF-nMP-n-Butyl acetate.csv  SC Cellulose acetate-m-cresol-n-Butanol-Methanol-IPA.csv
Unprocessed_Data/Chitosan/: Chitosan-DMSO-DMF-Pyridine-Acetonitrile.csv  MA-Chi-Diethyl ether.csv  MA-Chi-n-Butanol-Ethyl lactate.csv  MA-Chitosan-2,4,6-TrimethylPyridine-Acetone-Ethyl acetate-1-Octanol.csv  SC Chitosan-1,2,4-trichlorobenzene-Cyclopentanone-Cyclohexanone-Isobutyl acetate.csv  SC Chitosan-THF-DMAc-DCM-nMP.csv  SC Chitosan-m-cresol-Water-Ethanol-Methanol.csv
Unprocessed_Data/Dextran/: AM-Dextran-mCresol-Benzene.csv  Dextran-DMSO-Ethyl acetate-Pyridine-nMP.csv  SC Dextran-DMAc-DCM-Anisole-Ethanol.csv  SC Dextran-n-butanol-Ethanol-Methanol-Triflouroethanol.csv  SM-Dextran-DMSO-nMP.csv  SM-Dextran-Ethyl Lactate-THF-Cyclohexane-Pentane.csv
Unprocessed_Data/Mixed tests/: AM-Benzyl alcohol- PE-Nylon 12-mPEG-Dextran.csv  AM-Polychlorotrifluoroethylene-Polyacenaphthylene-Xylene-Pentane.csv  MA-PCL-Nylon12-Chloroform.csv  MA-PCL-Nylon12-n-hexane.csv  MA-PCL-PE-Nylon12-PS-Water.csv  MA-PVP(H)-PE-Nylon12-PCL-1-Butanol.csv  MA-PVP-PEO-Anisole.csv  PVDF-m-PEG-P4VP-Chloroform-DCM.csv
Unprocessed_Data/Nylon-12/: MA Nylon12-DMAc-Cyclohexanone-Isobutyl acetate-Ethanol.csv
Unprocessed_Data/PE/: AM-PE-Acetone.csv  (+4 more)
(+295 files in other folders)
