[tool.poetry]
name = "csst_unprocessed_data"
version = "0.1.0"
description = ""
authors = ["Joe Kern <josephdanielkern@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
csst-analyzer = {git = "ssh://git@github.com/jdkern11/csst_analyzer.git", rev = "v4.0.1"}
sqlalchemy-utils = "^0.41.2"
jupyterlab = "^4.2.5"
rdkit = "^2024.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
