[tool.poetry]
name = "csst_unprocessed_data"
version = "0.1.0"
description = ""
authors = ["Joe Kern <josephdanielkern@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy-utils = "^0.41.2"
jupyterlab = "^4.2.5"
rdkit = "^2024.3.5"
csst-analyzer = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
